# gemmi-extra-id

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  noxfile.py  pyproject.toml
.claude/commands/: gemmi-improve.md
.github/workflows/: ci.yml  release.yml
data/: 148L_atomworks_molecule_id_no_waters.cif  148L_atomworks_reference.cif  148L_no_waters.cif  148L_struct_conn_molecule_id.cif  148L_struct_conn_molecule_id_no_waters.cif
docs/: IMPLEMENTATION.md
scripts/: add_molecule_id_struct_conn.py  atomworks_ref.py  compare_molecule_id.py  gen_atomworks_molecule_id_no_waters.py  gen_atomworks_ref.py  test_all_pdb.py  test_atomworks_exact.py  test_complete_mode.py  test_hash_values.py
src/cifmolid/: __init__.py  cif.py  cli.py  formatters.py  mmcif.py  output.py
src/gemmi_extra_id/: __init__.py  cli.py  formatters.py  graph.py  graph_hash.py  mmcif.py
src/gemmi_extra_id/complete/: __init__.py  atom_hash.py  bonds.py  ccd.py  cif_utils.py  entities.py  hash.py
src/molid/: __init__.py  cif.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py  test_formatters.py  test_graph.py  test_graph_hash.py  test_mmcif.py  test_output.py
tests/data/failure_cases/: README.md  failure_ids.txt
tests/data/failure_cases/results/: molecule_id_after_fixes_3fail.json  molecule_id_original_43fail.json  pn_unit_id_after_pr12_29fail.json  pn_unit_id_after_pr13_0fail.json
tests/data/from_pdb/: 1A0H.cif
tests/data/ref/: 148L_ref.json  19HC_ref.json  1A0H_ref.json  5FQD_ref.json
