[project]
name = "molid"
version = "0.1.0"
description = "Assign molecule_id to mmCIF files based on covalent connectivity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mmcif", "crystallography", "structural-biology", "gemmi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "gemmi>=0.7.4",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "nox>=2024.4",
]

[project.scripts]
molid = "molid.cli:app"

[project.urls]
Repository = "https://github.com/nagaet/molecule-id-gemmi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = ["atomworks", "gemmi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
